--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "ui/Email.jsx"
+    "ui/Email.jsx
   ],
   "exclude": ["node_modules"]
 }
